tests/paczka1/fuzzy1/86616870.err
Error in line 3: eLu A241 12,6
Error in line 4: eLu S791 78,3
Error in line 16: M2zXzRsEmo A241 98,2
Error in line 25: PDgwEAX7p A757 7,7
Error in line 19: M2zXzRsEmo S791 94,8
Error in line 30: A290 A290 16,6
Error in line 32: A290 A757 48,2
Error in line 38: 1V639N S791 77,86
